# dawn

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  TODO.md  temp.py  writeup.md
examples/: CMakeLists.txt
examples/debug/: CMakeLists.txt  main.cpp
examples/ecall/: CMakeLists.txt  main.cpp
examples/linux/: CMakeLists.txt  dt.dtb  dt.dts  main.cpp
examples/machine/: CMakeLists.txt  main.cpp
examples/memory/: CMakeLists.txt  main.cpp
examples/simple/: CMakeLists.txt  a.out  main.cpp  simple_riscv_main.cpp
examples/state/: CMakeLists.txt  main.cpp
examples/test/: CMakeLists.txt  main.cpp
examples/user/: CMakeLists.txt  a.out  main.cpp  simple_riscv_main.cpp
includes/: helper.hpp  machine.hpp  memory.hpp  types.hpp
includes/dawn/: dawn.hpp  flat_set.hpp  helper.hpp  machine.hpp  memory.hpp  state.hpp  test.hpp  types.hpp
mini-rv32ima/mini-rv32ima/: bintoh  mini-rv32ima  mini-rv32ima.tiny
scripts/: run_linux.sh  run_tests.sh  run_user.sh
src/: helper.cpp  machine.cpp  memory.cpp  state.cpp  test.cpp  types.cpp
tests/examples/memory/: a.out  memory.cpp
tests/examples/print/: .clangd  a.out  print.cpp
tests/examples/simple/: a.out  main.cpp
tests/examples/trap_ecall/: a.out  main.S
tests/examples/uart/: a.out  main.cpp
